--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,4 +1,7 @@
+/* common */
 /* login */
+
+
 #login {
     background-image: url(../img/bg1.jpg);
     width: 100vw;
@@ -15,4 +18,11 @@
     margin: -250px 0 0 -250px;
     padding: 50px;
 
+}
+
+/* accounts */
+
+
+.table td, .table th {
+    vertical-align: middle;
 }
