--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -10,7 +10,7 @@
 
 #login .box {
     border-radius: 5%;
-    background-color: rgba(255,255 ,255, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     width: 500px;
     height: 500px;
     position: absolute;
@@ -23,7 +23,8 @@
 /* accounts */
 
 
-.table td, .table th {
+.table td,
+.table th {
     text-align: center;
     vertical-align: middle;
 }
@@ -32,5 +33,150 @@
 .table td,
 .table th,
 .smf {
-    font-size : 0.8rem;
+    font-size: 0.8rem;
+}
+
+/* PAGE */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#top {
+    width: 100%;
+    height: 60px;
+    background-color: black;
+}
+
+#below-top {
+    width: 100%;
+    height: 100%;
+    background-color: #e5e5e5;
+}
+
+#aside {
+    width: 70px;
+    height: 100vh;
+    background-color: #555;
+}
+
+
+#top .nav-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#top .nav-container button {
+    background-color: transparent;
+    border: none;
+}
+
+#top .user-box {
+    display: flex;
+    justify-content: flex-start;
+    width: 350px;
+    border-right: 1px solid  #4b4b4b;
+}
+
+#top .user-box .avatar {
+    width: 70px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#top .user-box .avatar img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: antiquewhite;
+}
+
+#top .user-box .user {
+    width: 300px;
+    color: #e5e5e5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#top .user-box .user span {
+    margin: 0 30px;
+}
+
+#top .logo-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+}
+
+#top .logo-top img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+}
+
+#top .user-setting {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 300px;
+}
+
+#top .user-setting .set-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 100%;
+    border-left: 1px solid #4b4b4b;
+}
+
+#top .user-setting .set-box img {
+    background-color: #e5e5e5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+#aside aside i {
+    font-weight: bolder;
+    font-size: 1.5rem;
+    color: white;
+}
+
+#aside aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+#aside aside .aside-box {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+
+#aside aside .aside-box span {
+    color: white;
+    font-size: 0.7rem;
+    margin-top: 4px;
+}
+
+
+
+/* footer */
+footer {
+    position: fixed;
+    bottom: 0;
 }
