--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,4 +1,15 @@
 /* common */
+html,
+body,
+#app,
+#main,
+main {
+    width: 100%;
+    height: 100%;
+    ;
+    font-family: 'Manjari', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
+}
 
 /* login */
 
@@ -49,6 +60,8 @@
 }
 
 #below-top {
+    display: flex;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
     background-color: #e5e5e5;
@@ -56,7 +69,8 @@
 
 #aside {
     width: 70px;
-    height: 100vh;
+    height: 100%;
+    ;
     background-color: #555;
 }
 
@@ -77,7 +91,7 @@
     display: flex;
     justify-content: flex-start;
     width: 350px;
-    border-right: 1px solid  #4b4b4b;
+    border-right: 1px solid #4b4b4b;
 }
 
 #top .user-box .avatar {
@@ -148,7 +162,7 @@
 #aside aside i {
     font-weight: bolder;
     font-size: 1.5rem;
-    color: white;
+
 }
 
 #aside aside {
@@ -165,18 +179,134 @@
     justify-content: center;
     align-items: center;
     height: 70px;
+    color: white;
 }
 
 #aside aside .aside-box span {
-    color: white;
     font-size: 0.7rem;
     margin-top: 4px;
 }
 
+#aside aside .active {
+    border: 1px solid white;
+    background-color: #e5e5e5;
+    color: black;
+}
 
+
+/* EVENT */
+
+main .main-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    height: 70px;
+    border-bottom: 1px solid white;
+}
+
+
+main .main-top .title-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 100%;
+}
+
+main .main-top .last-data {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 280px;
+    height: 100%;
+    margin: 0 20px;
+}
+
+main .main-left {
+    width: 280px;
+    height: 100%;
+}
+
+main .main-left .option-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+main .main-left .option-box .option-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    font-size: 0.8rem;
+    border-bottom: 1px solid #eeeeee;
+
+}
+
+main .main-left .option-box .option-header .option-header-box {
+    width: 100%;
+    margin: 0 0 0 10px;
+}
+
+main .main-left .option-box .option-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    font-size: 0.8rem;
+}
+
+main .main-left .option-box .option-body .option-element {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+}
+
+main .main-left .option-box .option-body .option-element>* {
+    margin: 0 10px;
+}
+
+main .main-left .option-box .option-body .option-element>*:nth-child(2) {
+    width: 100px;
+}
+
+main .main-left .option-box .option-footer {
+    width: 100%;
+    height: 100%;
+}
+
+main .main-left .option-box .option-footer .option-footer-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+main .main-right {
+    width: 100%;
+    height: 100%;
+
+}
 
 /* footer */
 footer {
     position: fixed;
     bottom: 0;
+}
+
+/* custom rules */
+
+.tocar {
+    border: 1px solid white;
+    border-radius: 5%;
 }
