--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -29,8 +29,9 @@ main {
 
 #app {
     margin: 0 auto;
-    max-width: 1920px;
-    height: 100%;
+    max-width: 100vw;
+    height: 100vh;
+    background-color: #e5e5e5
 }
 
 /* custom rules */
@@ -120,7 +121,8 @@ main {
 
 #top {
     width: 100%;
-    height: 60px;
+    height: 6%;
+    min-height: 50px;
     background-color: black;
 }
 
@@ -128,13 +130,13 @@ main {
     display: flex;
     justify-content: flex-start;
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: #e5e5e5;
 }
 
 #aside {
     width: 70px;
-    height: 100%;
+    height: 94vh;
     ;
     background-color: #555;
 }
@@ -146,31 +148,41 @@ main {
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
+    height: 100%;
 }
 
 #top .nav-container .user-container {
+    height: 100%;
     z-index: 2;
+    
+}
+
+#top .nav-container .user-container .channel-box {
+    height: 100%;
     background-color: black;
+}
+
+#top .nav-container .user-container .channel-box .user-box {
+    height: 100%;
+}
+
+#top .nav-container .user-container .channel-box .user-box .user span {
+    font-size: 0.8rem;
 }
 
 #top .nav-container .user-container:hover {
     cursor: pointer;
 }
 
-#top .nav-container button {
-    background-color: transparent;
-    border: none;
-}
-
 #top .nav-container .dot {
     color: black;
 }
 
-#top .nav-container .selected .user-box .user .selected {
+#top .nav-container .active .user-box .user .active {
     color: white;
 }
 
-#top .nav-container .user-container li:hover .dot {
+#top .nav-container .user-container .channel-box:hover .dot {
     display: block;
     color: #555;
 }
@@ -184,7 +196,7 @@ main {
 
 #top .user-box .avatar {
     width: 70px;
-    height: 60px;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -221,7 +233,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 300px;
-    height: 60px;
+    height: 100%;;
 }
 
 #top .logo-top img {
@@ -236,7 +248,7 @@ main {
     justify-content: flex-end;
     align-items: center;
     width: 300px;
-    height: 60px;
+    height: 100%;
 }
 
 #top .user-setting .set-box {
@@ -269,6 +281,7 @@ main {
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    height: 100%;
 }
 
 #aside aside .aside-box,
@@ -278,7 +291,8 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 70px;
+    height: 7vh;
+    min-height: 65px;
     color: white;
 }
 #aside aside .aside-box span,
@@ -300,7 +314,8 @@ main .main-top {
     justify-content: space-between;
     align-items: center;
     width: auto;
-    height: 70px;
+    height: 7vh;
+    min-height: 65px;
     border-bottom: 1px solid #eeeeee;
 }
 
@@ -328,11 +343,6 @@ main .main-body .main-left {
     height: 100%;
 }
 
-main .main-body .active{
-    display: block;
-
-}
-
 main .main-body .main-left .option-box {
     display: flex;
     flex-direction: column;
@@ -349,7 +359,8 @@ main .main-body .main-left .option-box .option-header {
     justify-content: start;
     align-items: center;
     width: 100%;
-    height: 70px;
+    height: 7vh;
+    min-height: 65px;
     font-size: 0.8rem;
     border-bottom: 1px solid #eeeeee;
 
@@ -476,7 +487,8 @@ main .main-body .main-center .event-box .event-header .event-header-box {
     flex-direction: row;
     align-items: flex-end;
     width: 50%;
-    height: 70px;
+    height: 7vh;
+    min-height: 65px;
     font-size: 0.8rem;
     padding-bottom: 10px;
 }
@@ -522,6 +534,10 @@ main .main-body .main-center .event-box .event-header .event-header-box .header-
     color:#ed5c5c;
 }
 
+main .main-body .main-center .event-box .event-body {
+    height:80vh;
+    overflow-y: auto;
+}
 
 main .main-body .main-center .event-box .event-body .event-element {
     margin-bottom: 5px;
@@ -533,7 +549,8 @@ main .main-body .main-center .event-box .event-body .event-element .event-summar
     flex-direction: row;
     align-items: flex-start;
     width: 100%;
-    height: 70px;
+    height: 7vh;
+    min-height: 65px;
     font-size: 0.8rem;
     border-bottom: 1px solid lightgray;
 }
@@ -1105,11 +1122,13 @@ main .main-body .main-center .config-box {
     flex-direction: column;
     width: 100%;
     background-color: white;
+    height: 87vh;
+    overflow-y: auto;
 }
 
 main .main-body .main-center .config-box .config-element {
     width: 640px;
-    margin: 10px 10px 20px 10px;
+    margin: 10px 10px 80px 10px;
 }
 
 main .main-body .main-center .config-box .config-element .config-head {
@@ -1145,6 +1164,12 @@ main .main-body .main-center .config-box .config-element .config-body .config-it
     width: 100px;
 }
 
+main .main-body .main-center .config-box .config-element .config-body .config-item .item-body .item-value input {
+    border: 1px solid lightblue;
+    text-align: center;
+    width: 100px;
+}
+
 main .main-body .main-center .config-box .config-element .config-body .config-item ul {
     list-style-type: none;
 }
@@ -1175,6 +1200,39 @@ main .main-body .main-center .config-box .config-element .config-body .config-it
     background-color: #ed5c5c;
     cursor: pointer;
 }
+
+main .main-body .main-center .config-box .config-element .config-footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+}
+
+main .main-body .main-center .config-box .config-element .config-footer .footer-option .footer-comment {
+    color: grey;
+    font-size: 0.7rem;
+}
+
+main .main-body .main-center .config-box .config-element .config-footer .footer-btn-box button {
+    width : 70px;
+}
+
+main .main-body .main-center .config-box .config-element .config-footer .footer-btn-box .apply {
+    border: 1px solid lightblue;
+    background-color: lightblue;   
+}
+
+main .main-body .main-center .config-box .config-element .config-footer .footer-btn-box .reset {
+color :white;
+background-color: darkgrey;
+border: 1px solid darkgrey;
+}
+
+main .main-body .main-center .config-box .config-element .config-footer .footer-btn-box .new {
+border: 1px solid black;
+background-color: white;
+}
+
 
 
 /* toggle */
