--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -97,21 +97,88 @@ main {
 
 
 #login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
+    position: relative;
+    background-color: lightgrey;
 }
- 
-#login .box {
-    border-radius: 5%;
-    background-color: rgba(255, 255, 255, 0.9);
-    width: 500px;
-    height: 500px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -250px 0 0 -250px;
-    padding: 50px;
+
+
+
+#login .login-box {
+    width: 400px;
+    height: 250px;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 15px 15px 0 0;
+    background-color: black;
 }
+
+
+#login .submit {
+    width: 400px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: black;
+    justify-content: center;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    letter-spacing: 0.8rem;
+    border-radius: 0 0 15px 15px;
+}
+
+#login .submit:hover {
+    background-color: #4b4b4b;
+    cursor: pointer;
+}
+
+
+#login .login-box .login-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    width: 100%;
+    height: 100px;
+}
+
+
+#login .login-box .login-label .logo-box img {
+    display: block;
+}
+
+#login .login-box .login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 150px;
+    padding: 15px;
+}
+
+#login .login-box .login-form .input-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
+#login .login-box .login-form .input-box input {
+    height: 40px;
+    width: 100%;
+    padding-left: 10px;
+}
+
 
 /* PAGE */
 * {
@@ -615,6 +682,12 @@ main .main-body .main-center .event-box .event-body .event-element .event-summar
     height: 100%;
     padding: 5px;
     background-color: white;
+}
+
+main .main-body .main-center .event-box .event-body .event-element .event-summary .element-body:hover,
+main .main-body .main-center .event-box .event-body .event-element .event-summary .element-footer:hover {
+    cursor: pointer;
+
 }
 
 main .main-body .main-center .event-box .event-body .event-element .event-summary .element-body .data-row1 {
