--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -87,7 +87,6 @@ main {
 
 .tocar {
     border: 1px solid white;
-    border-radius: 5%;
     font-family: 'Manjari', sans-serif;
     font-family: 'Noto Sans KR', sans-serif;
 }
@@ -1191,8 +1190,56 @@ main .stickey .filter:hover {
 main .stickey .filter span {
     font-size: 0.6rem;
 }
+
 /* STATS */
 
+main .main-body .main-center .chart-box .chart-element {
+    padding: 20px;
+    width: 100%;
+    height: 500px;
+}
+
+main .main-body .main-center .filter-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 7vh;
+    min-height: 65px;
+    border-bottom: 1px solid #eeeeee;
+    padding-left: 20px;
+
+}
+
+main .main-body .main-center .filter-box .filter-element {
+    color: grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 10px;
+    font-size: 0.8rem;
+}
+
+main .main-body .main-center .filter-box .filter-element.btn button {
+    border: none;
+    width: 80px;
+    padding : 1px 10px;
+}
+
+main .main-body .main-center .filter-box .filter-element.btn button:hover {
+    background-color: lightblue;
+}
+
+main .main-body .main-center .filter-box .filter-element span {
+    margin-right: 15px;
+}
+
+main .main-body .main-center .filter-box .filter-element select,
+main .main-body .main-center .filter-box .filter-element input {
+    text-align: center;
+    width: 100px;
+}
 
 /* CONFIG */
 
