--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1193,10 +1193,17 @@ main .stickey .filter span {
 
 /* STATS */
 
+main .main-body .main-center .chart-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
 main .main-body .main-center .chart-box .chart-element {
     padding: 20px;
-    width: 100%;
-    height: 500px;
+    width: 30%;
+    height: 300px;
 }
 
 main .main-body .main-center .filter-box {
@@ -1212,7 +1219,25 @@ main .main-body .main-center .filter-box {
 
 }
 
-main .main-body .main-center .filter-box .filter-element {
+main .main-body .main-center .filter-box .day-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 70%;
+    height: 100%;
+}
+
+main .main-body .main-center .filter-box .switch-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 30%;
+    height: 100%;
+}
+
+main .main-body .main-center .filter-box .day-box .filter-element {
     color: grey;
     display: flex;
     flex-direction: row;
@@ -1221,22 +1246,27 @@ main .main-body .main-center .filter-box .filter-element {
     font-size: 0.8rem;
 }
 
-main .main-body .main-center .filter-box .filter-element.btn button {
+main .main-body .main-center .filter-box .day-box .filter-element.btn button {
     border: none;
     width: 80px;
     padding : 1px 10px;
+    font-size: 0.8rem;
 }
 
-main .main-body .main-center .filter-box .filter-element.btn button:hover {
+main .main-body .main-center .filter-box .day-box .filter-element.btn.apply button {
+    background-color: red;
+}
+
+main .main-body .main-center .filter-box .day-box .filter-element.btn button:hover {
     background-color: lightblue;
 }
 
-main .main-body .main-center .filter-box .filter-element span {
+main .main-body .main-center .filter-box .day-box .filter-element span {
     margin-right: 15px;
 }
 
-main .main-body .main-center .filter-box .filter-element select,
-main .main-body .main-center .filter-box .filter-element input {
+main .main-body .main-center .filter-box .day-box .filter-element select,
+main .main-body .main-center .filter-box .day-box .filter-element input {
     text-align: center;
     width: 100px;
 }
