--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1185,8 +1185,6 @@ main .stickey .filter:hover {
 }
 
 
-
-
 main .stickey .filter span {
     font-size: 0.6rem;
 }
@@ -1198,7 +1196,12 @@ main .main-body .main-center .chart-box {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
-    margin-bottom: 30px;
+    width: 100%;
+    height: 73vh;
+}
+
+main .main-body .main-center .chart-box.index{
+    height: 36vh !important;
 }
 
 main .main-body .main-center .chart-box .element-box {
@@ -1207,14 +1210,14 @@ main .main-body .main-center .chart-box .element-box {
     justify-content: flex-start;
     flex-wrap: nowrap;
     margin-bottom: 30px;
-
+    width: 30%;
 }
 
 main .main-body .main-center .chart-box .table-box {
     width: 70%;
     background-color: white;
     margin-right: 10px;
-    height: 69vh;
+    height: 73vh;
     overflow-y: auto;
 }
 
@@ -1224,7 +1227,6 @@ main .main-body .main-center .chart-box .table-box.only {
 }
 
 main .main-body .main-center .chart-box .table-box .order-table {
-    height: 69vh;
     width: 100%;
     overflow-y: auto;
     font-size: 0.8rem;
@@ -1269,15 +1271,19 @@ main .main-body .main-center .chart-box .table-box .order-table tbody {
     text-align: center;
 }
 
+main .main-body .main-center .chart-box .table-box .order-table tbody tr.channel {
+    background-color: lightyellow;
+}
+
 main .main-body .main-center .chart-box .element-box .chart-element {
-    padding: 20px;
-    width: 500px;
+    padding: 0 20px 20px 20px;
+    width: 450px;
     height: 300px;    
 }
 
 main .main-body .main-center .chart-box .chart-element {
-    padding: 20px;
-    width: 30%;
+    padding: 0 20px 20px 20px;
+    width: 500px;
     height: 300px;
 }
 
@@ -1343,7 +1349,7 @@ main .main-body .main-center .filter-box .day-box .filter-element.btn button {
 }
 
 main .main-body .main-center .filter-box .day-box .filter-element.btn.apply button {
-    background-color: red;
+    background-color: #ed5c5c;
 }
 
 main .main-body .main-center .filter-box .day-box .filter-element.btn button:hover {
@@ -1366,6 +1372,36 @@ main .main-body .main-center .title-box {
     height: 7vh;
     min-height: 65px;
 }
+
+main .main-body .main-center .title-box.effect-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 70% !important;
+}
+
+main .main-body .main-center .title-box.effect-box .effect {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+main .main-body .main-center .title-box.effect-box .effect > div.active {
+    color: black;
+    text-decoration: none;
+}
+
+main .main-body .main-center .title-box.effect-box .effect > div,
+main .main-body .main-center .title-box.effect-box .effect > div:hover {
+    font-size : 0.8rem;
+    margin-left: 10px;
+    cursor: pointer;
+    color: red;
+    text-decoration-line: line-through;
+}
+
 
 /* CONFIG */
 
